feat(vertx-http,security): make builtin auth mech order customizable
* Closes https://github.com/quarkusio/quarkus/issues/49821

Signed-off-by: Michal Vavřík <michal.vavrik@aol.com>