@@ -47,6 +47,7 @@ import io.vertx.ext.web.RoutingContext;
  */
 public class BasicAuthenticationMechanism implements HttpAuthenticationMechanism {
 
+    public static final int PRIORITY = 2000;
     private static final Logger log = Logger.getLogger(BasicAuthenticationMechanism.class);
 
     private final String challenge;
@@ -67,6 +68,7 @@ public class BasicAuthenticationMechanism implements HttpAuthenticationMechanism
 
     private final Charset charset;
     private final Map<Pattern, Charset> userAgentCharsets;
+    private final int priority;
 
     /**
      * @deprecated use {@link BasicAuthenticationMechanism(String, boolean)}
@@ -77,15 +79,20 @@ public class BasicAuthenticationMechanism implements HttpAuthenticationMechanism
     }
 
     public BasicAuthenticationMechanism(final String realmName, final boolean silent) {
-        this(realmName, silent, StandardCharsets.UTF_8, Collections.emptyMap());
+        this(realmName, silent, PRIORITY);
+    }
+
+    public BasicAuthenticationMechanism(final String realmName, final boolean silent, int priority) {
+        this(realmName, silent, StandardCharsets.UTF_8, Map.of(), priority);
     }
 
     public BasicAuthenticationMechanism(final String realmName, final boolean silent,
-            Charset charset, Map<Pattern, Charset> userAgentCharsets) {
+            Charset charset, Map<Pattern, Charset> userAgentCharsets, int priority) {
         this.challenge = realmName == null ? BASIC : BASIC_PREFIX + "realm=\"" + realmName + "\"";
         this.silent = silent;
         this.charset = charset;
         this.userAgentCharsets = Map.copyOf(userAgentCharsets);
+        this.priority = priority;
     }
 
     private Charset getCharset(RoutingContext context) {
@@ -177,6 +184,6 @@ public class BasicAuthenticationMechanism implements HttpAuthenticationMechanism
 
     @Override
     public int getPriority() {
-        return 2000;
+        return priority;
     }
 }
